@@ -1,0 +1,4 @@
+# macOS generated files #
+######################
+.DS_Store
+.DS_Store?
